# vkbase

./: CMakeLists.txt  README.md  vkbase.builders.cppm  vkbase.cppm  vkbase.primitives.cppm
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: EnableCpp20Module.cmake
impl/: primitives.cpp
interface/: builders.cppm  primitives.cppm  vkbase.cppm
src/: vkbase.builders.cppm  vkbase.primitives.cppm
test/: CMakeLists.txt  app_build_test.cpp  app_build_test_custom_queue.cpp  app_build_test_dynamic_rendering.cpp  app_with_swapchain_build_test_glfw.cpp  app_with_swapchain_build_test_headless.cpp  main.cpp
